added verify-email route and send email logic
